--- a/curl/8.14-25.10/spread.yaml
+++ b/curl/8.14-25.10/spread.yaml
@@ -23,10 +23,10 @@ suites:
       sudo apt remove --yes retry
 
       # Load the rock into docker
-      sudo rockcraft.skopeo --insecure-policy copy "oci-archive:$CRAFT_ARTIFACT" docker-daemon:my-rock-name:latest
+      sudo rockcraft.skopeo --insecure-policy copy "oci-archive:$CRAFT_ARTIFACT" docker-daemon:curl:latest
 
     restore: |
-      docker image rm --force my-rock-name:latest
+      docker image rm --force curl:latest
 
 exclude:
   - .git
